RESOLVED FIXED49255
Android is missing implementation of V8GCController::checkMemoryUsage
https://bugs.webkit.org/show_bug.cgi?id=49255
Summary Android is missing implementation of V8GCController::checkMemoryUsage
Ben Murdoch
Reported 2010-11-09 08:14:43 PST
The Android V8 bindings do not implement V8GCController::checkMemoryUsage. This results in some JS heavy sites crashing due to OOM. Patch to follow.
Attachments
Patch. (3.61 KB, patch)
2010-11-09 08:32 PST, Ben Murdoch
no flags
patch no tabs (3.63 KB, patch)
2010-11-09 09:01 PST, Ben Murdoch
no flags
Ben Murdoch
Comment 1 2010-11-09 08:32:04 PST
WebKit Review Bot
Comment 2 2010-11-09 08:36:07 PST
Attachment 73380 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--diff-files', u'WebCore/ChangeLog', u'WebCore/bindings/v8/V8GCController.cpp', u'WebCore/platform/android/PlatformBridge.h']" exit_code: 1 WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:9: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:10: Line contains tab character. [whitespace/tab] [5] WebCore/ChangeLog:17: Line contains tab character. [whitespace/tab] [5] Total errors found: 4 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Ben Murdoch
Comment 3 2010-11-09 09:01:58 PST
Created attachment 73383 [details] patch no tabs
Steve Block
Comment 4 2010-11-09 09:10:06 PST
Comment on attachment 73383 [details] patch no tabs r=me
WebKit Commit Bot
Comment 5 2010-11-09 09:35:17 PST
Comment on attachment 73383 [details] patch no tabs Clearing flags on attachment: 73383 Committed r71639: <http://trac.webkit.org/changeset/71639>
WebKit Commit Bot
Comment 6 2010-11-09 09:35:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.