2010-11-09  Ben Murdoch  <benm@google.com>

Reviewed by Steve Block.

        Android is missing implementation of V8GCController::checkMemoryUsage
        https://bugs.webkit.org/show_bug.cgi?id=49255

        This patch adds the necessary code to WebCore to implement the
        functionality. The implementation of the PlatformBridge on Android
        does not live upstream yet, so not patching that here.

        No new test as this is a platform specific change on Android.

        * bindings/v8/V8GCController.cpp:
        (WebCore::V8GCController::checkMemoryUsage): Implement on Android.
        * platform/android/PlatformBridge.h: Add necessary methods to read
            device specific memory usage and constraints.

Canonical link: https://commits.webkit.org/62126@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71639 268f45cc-cd09-0410-ab3c-d52691b4dbfc