WebCore/platform/android/PlatformBridge.h
@@ -106,6 +106,11 @@ public:
     static NPObject* pluginScriptableObject(Widget*);
     // Language
     static String computeDefaultLanguage();
+    // Memory details for V8 GC
+    static int lowMemoryUsageMB();
+    static int highMemoryUsageMB();
+    static int memoryUsageMB();
+    static int actualMemoryUsageMB();
 };
 
 }
